--- a/themes/almeida-cv/layouts/partials/_diplomas.html
+++ b/themes/almeida-cv/layouts/partials/_diplomas.html
@@ -1,11 +1,11 @@
-{{ if .Site.Data.content.Diplomas }}
+{{ if .Site.Data.content.Awards }}
 <div class="sideSection">
     <div class="sideSection__heading">
-        <h2 class="sideSection__title">Diplomas</h2>
+        <h2 class="sideSection__title">Awards</h2>
     </div>
     <div class="sideSection__content">
         <ul>
-            {{ range .Site.Data.content.Diplomas }}
+            {{ range .Site.Data.content.Awards }}
             <li>{{ . | safeHTML }}</li>
             {{ end }}
         </ul>
